@@ -4,6 +4,8 @@ Version 0.6-3 (??-???-2011, Rev. ???)
 
 - New dependency: JavaGD, MCPAN
 
+- Example graphs have been renamed (Please look at ?exampleGraph).
+
 - Greek small letters are allowed as variables
   - enter them as e.g. "\epsilon", "\iota", "\phi" in the GUI.
   - use edgeData "variableWeight" to set them in R
